[package]
name = "rocket-client-addr"
version = "0.5.5"
authors = ["Magic Len <len@magiclen.org>"]
edition = "2021"
rust-version = "1.69"
repository = "https://github.com/magiclen/rocket-client-addr"
homepage = "https://magiclen.org/rocket-client-addr"
keywords = ["rocket", "server", "web", "ip", "http"]
categories = ["web-programming"]
description = "This crate provides two request guards used for getting an IP address from a client."
license = "MIT"
include = ["src/**/*", "Cargo.toml", "README.md", "LICENSE"]

[dependencies]
rocket = "0.6.0-dev"

[patch.crates-io]
rocket = { git = "https://github.com/guenhter/Rocket.git", branch = "db-pools-without-default-tls" }

